[gd_scene load_steps=6 format=3 uid="uid://tq8104wgj2bl"]

[ext_resource type="Script" path="res://Assets/Scripts/main_menu.gd" id="1_0dux7"]
[ext_resource type="Texture2D" uid="uid://28oyn6a481x8" path="res://Assets/Textures/UI/Main Menu.png" id="1_h714b"]
[ext_resource type="PackedScene" uid="uid://c45vh8sb253f7" path="res://Scenes/gameroot.tscn" id="2_bwb2r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqtsc"]
bg_color = Color(0.156863, 0.117647, 0.14902, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.137255, 0.101961, 0.12549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_aay0n"]
font_size = 30
font_color = Color(0.984314, 0.898039, 0.419608, 1)
shadow_color = Color(0, 0, 0, 0.992157)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dux7")
gameroot = ExtResource("2_bwb2r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_h714b")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 222.0
offset_right = 578.0
offset_bottom = 294.0
flat = true

[node name="SettingsButton" type="Button" parent="."]
auto_translate_mode = 1
layout_mode = 0
offset_left = 398.0
offset_top = 304.0
offset_right = 626.0
offset_bottom = 374.0
flat = true

[node name="QuitButton" type="Button" parent="."]
auto_translate_mode = 1
layout_mode = 0
offset_left = 442.0
offset_top = 384.0
offset_right = 582.0
offset_bottom = 454.0
flat = true

[node name="SettingsContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -112.0
offset_right = 188.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bqtsc")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_aay0n")
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="SettingsContainer/VBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
min_value = -30.0
max_value = 10.0
value = -10.0

[node name="Spacer" type="VBoxContainer" parent="SettingsContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
alignment = 1

[node name="CloseButton" type="Button" parent="SettingsContainer/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
modulate = Color(0.984314, 0.898039, 0.419608, 1)
layout_mode = 2
text = "Close"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="SettingsContainer/VBoxContainer/VolumeSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="SettingsContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
